opam-version: "1.2"
maintainer:   "dave@recoil.org"
authors:      [
  "Vincent Hanquez"
  "Thomas Gazagnaire"
  "Dave Scott"
  "Anil Madhavapeddy"
  "Vincent Bernardoff"
]
homepage:     "https://github.com/mirage/ocaml-xenstore"
bug-reports:  "https://github.com/mirage/ocaml-xenstore/issues"
dev-repo:     "https://github.com/mirage/ocaml-xenstore.git"

build: [
  [ "jbuilder" "subst"] {pinned}
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocamlfind" {build}
  "jbuilder"  {build & >="1.0+beta9"}
  "cstruct" {>= "1.9.0"}
  "ppx_tools"
  "lwt"
  "camlp4" {build}
  "ounit" {build}
]
depexts: [
  [["debian"] ["libxen-dev" "uuid-dev"]]
  [["ubuntu"] ["libxen-dev" "uuid-dev"]]
  [["centos"] ["xen-devel"]]
  [["xenserver"] ["xen-dom0-libs-devel" "xen-libs-devel"]]
]
available: [ ocaml-version >= "4.02.0" ]
